--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,8 +17,8 @@ build_script:
   - npm run build   # команда сборки
 
 test_script:
-  - npm run lint  # скрипт тестирования
-  - npm run test
+  # - npm run lint  # скрипт тестирования
+  # - npm run test
 
 deploy_script:  # скрипт развёртывания
   - git config --global credential.helper store
